# types-awscrt

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  istub.yml  pyproject.toml  setup.cfg  test.py
.github/workflows/: helpers.js  on_push.yml  on_release.yml  publish_on_update.yml
awscrt-stubs/: __init__.pyi  _test.pyi  auth.pyi  checksums.pyi  common.pyi  crypto.pyi  exceptions.pyi  http.pyi  io.pyi  mqtt.pyi  mqtt5.pyi  s3.pyi  websocket.pyi
awscrt-stubs/aio/: __init__.pyi  http.pyi
awscrt-stubs/eventstream/: __init__.pyi  rpc.pyi
scripts/: before_commit.sh  open.sh  sanity_check.sh
workflows/: on_push.yml
