[tool.black]
line-length = 100
include = '(awscrt-stubs)/.*\.pyi?$'
target-version = ['py37', 'py38', 'py39', 'py310']
preview = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = []

[tool.poetry]
name = "types-awscrt"
version = "0.21.0"
description = "Type annotations and code completion for awscrt"
authors = ["Vlad Emelianov <vlad.emelianov.nz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://youtype.github.io/mypy_boto3_builder/"
repository = "https://github.com/youtype/types-awscrt"
documentation = "https://youtype.github.io/mypy_boto3_builder/"
keywords = ["awscrt", "type-annotations", "pyright", "mypy", "boto3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "awscrt-stubs" }]
include = [
    "awscrt-stubs/py.typed",
    "awscrt-stubs/*.pyi",
    "awscrt-stubs/*/*.pyi",
]

[tool.poetry.urls]
"Documentation" = "https://youtype.github.io/mypy_boto3_builder/"
"Source" = "https://github.com/youtype/types-awscrt"
"Bug Tracker" = "https://github.com/youtype/types-awscrt/issues"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
awscrt = "*"
pyright = "*"
ruff = "*"
mypy = { version = "*", python = ">=3.10" }
istub = { version = "*", python = ">=3.10" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["awscrt-stubs"]
exclude = ["**/__pycache__", "tests", "typestubs"]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.7"

[tool.mypy]
python_version = "3.7"
warn_return_any = false
warn_unused_ignores = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
ignore_errors = false

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py37"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "N", "D", "C4", "C90", "RUF"]
ignore = [
    "E203",
    "D107",
    "D200",
    "D203",
    "D212",
    "D401",
    "D406",
    "D407",
    "D413",
    "D417",
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["test_*.py", "*.pyi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
