[project]
name = "types-awscrt"
version = "0.23.9"
requires-python = ">= 3.8"
description = "Type annotations and code completion for awscrt"
authors = [{ name = "Vlad Emelianov", email = "vlad.emelianov.nz@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["awscrt", "type-annotations", "pyright", "mypy", "boto3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[dependency-groups]
dev = ["setuptools", "awscrt", "mypy", "pyright", "istub"]

[tool.uv]
config-settings = { editable-mode = "strict" }

[project.urls]
Homepage = "https://github.com/youtype/types-awscrt"
Documentation = "https://youtype.github.io/mypy_boto3_builder/"
Repository = "https://github.com/youtype/types-awscrt"
Changelog = "https://github.com/youtype/types-awscrt/releases"
Issues = "https://github.com/youtype/types-awscrt/issues"


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ["awscrt-stubs"]

[tool.pyright]
include = ["awscrt-stubs"]
exclude = ["**/__pycache__", "tests", "typestubs"]
ignore = ["test.py"]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.8"

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_ignores = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
ignore_errors = false

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "RUF", # ruff
    "PYI", # flake8-pyi
    "UP",  # pyupgrade
    "CPY", # flake8-copyright
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["test_*.py"]
ignore = [
    "N803",   # invalid-argument-name
    "PYI010", # non-empty-stub-body
    "PYI019", # custom-type-var-return-type
    "PYI021", # docstring-in-stub
    "PYI048", # stub-body-multiple-statements
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-copyright]
# author = "Vlad Emelianov"
min-file-size = 200
notice-rgx = "(?i)Copyright [0-9]{4}"
